--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
 <body>
 
 <div class="video-container">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/avly0uwZzOE?si=zJFNaD6Q0JTJVr1H" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/avly0uwZzOE?si=zJFNaD6Q0JTJVr1H&?autoplay=1&mute=1" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 <div class="video-container">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cb12KmMMDJA?si=nDkX8N1BNCEl24NQ" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cb12KmMMDJA?si=nDkX8N1BNCEl24NQ&?autoplay=1&mute=1" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 <div class="video-container">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XKEBqDusJu0?si=PhtYALDhzdp5CMW-" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XKEBqDusJu0?si=PhtYALDhzdp5CMW-&?autoplay=1&mute=1" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 <div class="video-container">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vfkUsBe_uBU?si=ZVCvJ8W6UIORRmtp" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vfkUsBe_uBU?si=ZVCvJ8W6UIORRmtp&?autoplay=1&mute=1" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 </body>
