--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             width: 35%;
             display: flex;
             flex-direction: column;
-            padding: 8px;
+            padding: 10px;
             padding-bottom: 10px;
             padding-right: 10px;
             justify-content: center;
@@ -89,7 +89,7 @@
 
 <div id="left-column">
     <div class="video-container larger-video" id="left-larger-video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/avly0uwZzOE?si=zJFNaD6Q0JTJVr1H?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow=" autoplay; accelerometer;clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/avly0uwZzOE?si=zJFNaD6Q0JTJVr1H?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <div class="button-container">
@@ -101,17 +101,17 @@
 
 <div id="right-column">
     <div class="video-container" id="right-stream-container1">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cb12KmMMDJA?si=nDkX8N1BNCEl24NQ?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="autoplay; accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cb12KmMMDJA?si=nDkX8N1BNCEl24NQ?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <div class="video-container" id="right-stream-container2">
         <!-- Different content from the first container -->
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XKEBqDusJu0?si=PhtYALDhzdp5CMW-?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="autoplay; accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XKEBqDusJu0?si=PhtYALDhzdp5CMW-?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <div class="video-container" id="right-stream-container3">
         <!-- Different content from the first two containers -->
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vfkUsBe_uBU?si=ZVCvJ8W6UIORRmtp?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="autoplay; accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vfkUsBe_uBU?si=ZVCvJ8W6UIORRmtp?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 </div>
 
