--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             height: 100%;
             margin: 0;
             box-sizing: border-box;
-            background-color: #000;
+            background-color: #3b3c3b;
             overflow: hidden; /* Prevent scrolling */
             padding: 3px; /* 3px padding on all sides */
         }
